color contrast fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -188,6 +188,10 @@ a.skip:hover {
   background-color: #205fee !important;
 }
 
+.is-success {
+  color: #08712d !important;
+}
+
 .is-primary {
   background-color: #0b6877 !important;
 }
@@ -196,6 +200,14 @@ a.skip:hover {
   background-color: #bd1b3c !important;
 }
 
-.is-active {
-  
+a {
+ color: #1823ab !important;
+}
+
+.has-text-grey-light {
+  color: #676767 !important;
+}
+
+.hero.is-info .tabs.is-boxed li.is-active a, .hero.is-info .tabs.is-boxed li.is-active a:hover, .hero.is-info .tabs.is-toggle li.is-active a, .hero.is-info .tabs.is-toggle li.is-active a:hover {
+  color: #1872ad !important;
 }
